--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 {embed="v3/_page-top"
- title="About Us: Mission and Values"
+ title="About Us: Mission & Values"
  desc="An overview of how we approach our ministry."
  page_slug="mission-values"
  sec_slug="about"}
@@ -10,23 +10,22 @@
 
         <section class="content">
 
-            <h1>Mission and Values</h1>
+            <h1>Mission & Values</h1>
 
-            <h2 class="visuallyhidden">Our mission:</h2>
+            <h2>Our mission:</h2>
 
             <p class="intro">
                 Artisan Church’s mission is to be a vibrant church community where we
                 encounter God, embrace people, and engage culture—in the way of Jesus.
             </p>
 
-            <p>
-                <a class="scripture-link"
-                   href="http://beta.biblestudytools.com/nrs/passage?q=mark+12:28-34;matthew+28:18-20;matthew+9:9-17;acts+17:22-34;john+14:6-7">
+            <p class="scripture-link">
+                <a href="http://beta.biblestudytools.com/nrs/passage?q=mark+12:28-34;matthew+28:18-20;matthew+9:9-17;acts+17:22-34;john+14:6-7">
                     (Mk 12:28–34; Mt 28:18–20, 9:9–17; Acts 17:22–34; Jn 14:6–7)
                 </a>
             </p>
 
-            <h2>These biblical values shape our journey together:</h2>
+            <h2>Our values:</h2>
 
             <dl>
                 <dt>Awe</dt>
