--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
         <section class="home-kickers">
 
             <a class="home-kicker home-mission" href="about/">
-                Encounter God, embrace people, engage culture—in the way of Jesus.
+                <div class="kicker-bg">
+                    <h1 class="kicker-head">Our Mission</h1>
+                    <p>Encounter God, embrace people, engage culture&mdash;in the way of Jesus.</p>
+                </div>
             </a>
 
-            <a class="home-kicker home-map" href="/directions/">
-                <!-- <img data-src="holder.js/400x160/auto/text:map snippet"
-                     alt="Location: 1235 South Clinton Ave, Rochester NY"> -->
+            <a class="home-kicker home-map" href="directions/">
                 map placeholder – need to devise responsive solution
             </a>
 
-            <a class="home-kicker home-services" href="/worship/">
-                <h1>Sunday Worship</h1>
-                <h2>10:00–11:30 am</h2>
-                <h3>Followed by coffee & conversation</h3>
+            <a class="home-kicker home-services" href="worship/">
+                <div class="kicker-bg">
+                    <h1 class="kicker-head">Sunday Worship</h1>
+                    <h2 class="kicker-head">10:00&ndash;11:30 am</h2>
+                    <h3>Followed by coffee &amp; conversation</h3>
+                </div>
             </a>
 
         </section>
@@ -28,23 +31,26 @@
 
             <section class="feature-primary">
                 <a class="feature-primary-img" href="/worship/messages/series-name/">
-                    <!-- big feature image (16x9) -->
-                    <img src="http://www.artisanchurch.com/ee/images/site_images/series/FamilyofAbraham_web.jpg"
-                         alt=""> <!-- Alt tag intentionally left blank -->
-                    <!-- <img data-src="holder.js/800x450/auto" /> -->
+                    <div class="feature-primary-img-bg">
+                        <!-- big feature image (16x9) -->
+                        <img src="http://www.artisanchurch.com/ee/images/site_images/series/FamilyofAbraham_web.jpg"
+                             alt=""> <!-- Alt tag intentionally left blank -->
+                    </div>
                 </a>
                 <section class="feature-primary-copy">
-                    <header>
-                        <h3 class="feature-slug">Current Series</h3>
-                        <a class="feature-primary-title" href="/worship/messages/series-name/">
-                            <h1>Family of Abraham</h1>
+                    <div class="feature-primary-copy-bg">
+                        <header>
+                            <h3 class="feature-slug">Current Series</h3>
+                            <a class="feature-primary-title" href="/worship/messages/series-name/">
+                                <h1>Family of Abraham</h1>
+                            </a>
+                            <h2>Blessed to be a blessing</h2>
+                        </header>
+                        <p>Abraham was called by God to be the father of a “great nation” that would be the source of blessing for all the families of the earth. In the story of Abraham and his descendants, we find a great foundation for our own participation in the unfolding Story of God.</p>
+                        <a class="read-more" href="/worship/messages/series-name">
+                            series details <i class="icon-angle-right"></i>
                         </a>
-                        <h2>Blessed to be a blessing</h2>
-                    </header>
-                    <p>Abraham was called by God to be the father of a “great nation” that would be the source of blessing for all the families of the earth. In the story of Abraham and his descendants, we find a great foundation for our own participation in the unfolding Story of God.</p>
-                    <a class="read-more" href="/worship/messages/series-name">
-                    series details <i class="icon-angle-right"></i>
-                    </a>
+                    </div>
                 </section>
             </section>
 
@@ -64,7 +70,7 @@
                             </a>
                             <h2>Secondary heading text</h2>
                         </header>
-                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="#">learn more <i class="icon-angle-right"></i></a></p>
+                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="#">learn more&nbsp;<i class="icon-angle-right"></i></a></p>
                     </section>
                 </section>
 
@@ -82,7 +88,7 @@
                             </a>
                             <h2>Probably even longer series subtitle</h2>
                         </header>
-                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="#">learn more <i class="icon-angle-right"></i></a></p>
+                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="#">learn more&nbsp;<i class="icon-angle-right"></i></a></p>
                     </section>
                 </section>
 
@@ -100,7 +106,7 @@
                             </a>
                             <h2>Sermon Audio</h2>
                         </header>
-                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="/podcast">learn more <i class="icon-angle-right"></i></a></p>
+                        <p>This is the shorter description of this item. This is the shorter description of this item. <a href="/podcast">learn more&nbsp;<i class="icon-angle-right"></i></a></p>
                     </section>
                 </section>
 
