--- a/_header.html
+++ b/_header.html
@@ -1,22 +1,20 @@
     <header>
 
-        <section class="masthead">
-            <a href="/">
-                <img class="logo logo-svg"
-                     src="/static/img/logo.svg"
-                     onerror="this.onerror=null;this.src='/static/img/logo_h_300x61_transparent.png';"
-                     alt="Artisan Church">
-                <noscript>
-                    <img class="logo logo-png"
-                         src="/static/img/logo_h_300x61_transparent.png"
-                         alt="Artisan Church"
-                         width="300"
-                         height="61">
-                </noscript>
-            </a>
-        </section>
+        <a class="logo" href="/">
+            <img class="logo-svg"
+                 src="static/img/logo.svg"
+                 onerror="this.onerror=null;this.src='static/img/logo_h_300x61_transparent.png';"
+                 alt="Artisan Church">
+            <noscript>
+                <img class="logo-png"
+                     src="static/img/logo_h_300x61_transparent.png"
+                     alt="Artisan Church"
+                     width="300"
+                     height="61">
+            </noscript>
+        </a>
 
-        <h1 class="menu-button" id="menu-button"><i class="icon-reorder"></i> Menu</h1>
+        <button class="menu-button" id="menu-button"><i class="icon-reorder"></i> Menu</button>
 
         <nav class="header-nav" id="header-nav" role="navigation">
 {embed="v3/_navigation"}
