--- a/_sidebar-about.html
+++ b/_sidebar-about.html
@@ -12,7 +12,7 @@
                         <a href="/staff/">Staff</a>
                     </li>
                     <li class="name{if embed:page_slug == 'name'} current{/if}">
-                        <a href="/our-name/">Why &ldquo;Artisan&rdquo; Church?</a>
+                        <a href="/our-name/">Why “Artisan” Church?</a>
                     </li>
                     <li class="ministries{if embed:page_slug == 'ministries'} current{/if}">
                         <a href="/ministries/">Ministries</a>
@@ -21,13 +21,19 @@
             </nav>
 
             <section class="sidebar-content">
-                <h1>Sidebar content header</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h1>Core Affirmations</h1>
+                <p>Our first desire is to follow in the “ancient paths” of the generous orthodoxy revealed in Scripture, affirmed in the consensual creeds of the early church, and embodied in the life of Jesus’ followers throughout time and across cultures.</p>
+                <p>Yet we equally recognize Christ’s call to contextualize his gospel – <em>without</em> compromising its core – by providing “new wineskins” that will allow the effervescent work of God’s Spirit to reach its full-bodied potential.</p>
+                <p>These simple statements are our humble attempt at articulating God’s vision for his church at Artisan as we partner with his redemptive purposes.</p>
+
+                <h1>Our Affiliation</h1>
+                <p>We were launched as an official church plant of the Evangelical Covenant Church, and continue to be part of this wonderful family of churches. They provide resources, encouragement, and accountability.</p>
+                <h4>Related links:</h4>
+                <ul>
+                    <li><a href="http://www.covchurch.org">Evangelical Covenant Church website</a></li>
+                    <li>ECC – “<a href="http://www.covchurch.org/who-we-are/">Who We Are</a>”</li>
+                    <li>ECC – “<a href="http://www.covchurch.org/who-we-are/beliefs/affirmations/">Affirmations</a>”</li>
+                </ul>
             </section>
 
         </aside>
