--- a/_footer.html
+++ b/_footer.html
@@ -12,7 +12,7 @@
         </section>
 
         <nav class="footer-nav" id="footer-nav" role="navigation">
-{embed:"v3/navigation"}
+{embed="v3/_navigation" sec_slug="{embed:sec_slug}"}
         </nav>
 
 <section class="social">
