--- a/_header.html
+++ b/_header.html
@@ -2,12 +2,12 @@
 
         <a class="logo" href="/">
             <img class="logo-svg"
-                 src="static/img/logo.svg"
-                 onerror="this.onerror=null;this.src='static/img/logo_h_300x61_transparent.png';"
+                 src="/static/img/logo.svg"
+                 onerror="this.onerror=null;this.src='/static/img/logo_h_300x61_transparent.png';"
                  alt="Artisan Church">
             <noscript>
                 <img class="logo-png"
-                     src="static/img/logo_h_300x61_transparent.png"
+                     src="/static/img/logo_h_300x61_transparent.png"
                      alt="Artisan Church"
                      width="300"
                      height="61">
@@ -17,7 +17,7 @@
         <button class="menu-button" id="menu-button"><i class="icon-reorder"></i> Menu</button>
 
         <nav class="header-nav" id="header-nav" role="navigation">
-{embed="v3/_navigation"}
+{embed="v3/_navigation" sec_slug="{embed:sec_slug}"}
         </nav>
 
     </header>
