Update map kicker markup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </a>
 
             <a class="home-kicker home-map" href="directions/">
-                map placeholder – need to devise responsive solution
+                <div class="home-map-text kicker-head">Directions</div>
             </a>
 
             <a class="home-kicker home-services" href="worship/">
