Re-add .inside to main on interior pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
 {embed="v3/_header" sec_slug="about"}
 
-    <main class="main" id="main" role="main">
+    <main class="main inside" id="main" role="main">
 
         <section class="content">
 
