--- a/_content-page.html
+++ b/_content-page.html
@@ -6,7 +6,7 @@
 
 {embed="v3/_header"}
 
-    <main class="main" id="main" role="main">
+    <main class="main inside" id="main" role="main">
 
         <section class="content">
 
