Update some About Us copy
And stub out the rest of the section

--- a/_sidebar-about.html
+++ b/_sidebar-about.html
@@ -9,7 +9,7 @@
                         <a href="/about/">Mission & Values</a>
                     </li>
                     <li class="staff{if embed:page_slug == 'staff'} current{/if}">
-                        <a href="/staff/">Staff</a>
+                        <a href="/staff/">Meet the Staff</a>
                     </li>
                     <li class="name{if embed:page_slug == 'name'} current{/if}">
                         <a href="/our-name/">Why “Artisan” Church?</a>
@@ -22,17 +22,40 @@
 
             <section class="sidebar-content">
                 <h1>Core Affirmations</h1>
-                <p>Our first desire is to follow in the “ancient paths” of the generous orthodoxy revealed in Scripture, affirmed in the consensual creeds of the early church, and embodied in the life of Jesus’ followers throughout time and across cultures.</p>
-                <p>Yet we equally recognize Christ’s call to contextualize his gospel – <em>without</em> compromising its core – by providing “new wineskins” that will allow the effervescent work of God’s Spirit to reach its full-bodied potential.</p>
-                <p>These simple statements are our humble attempt at articulating God’s vision for his church at Artisan as we partner with his redemptive purposes.</p>
+                <p>
+                    Our first desire is to follow in the “ancient paths” of the generous orthodoxy revealed
+                    in Scripture, affirmed in the consensual creeds of the early church, and embodied in the
+                    life of Jesus’ followers throughout time and across cultures.
+                </p>
+                <p>
+                    Yet we equally recognize Christ’s call to contextualize his gospel – <em>without</em>
+                    compromising its core – by providing “new wineskins” that will allow the effervescent
+                    work of God’s Spirit to reach its full-bodied potential.
+                </p>
+                <p>
+                    These simple statements are our humble attempt at articulating God’s vision for his
+                    church at Artisan as we partner with his redemptive purposes.
+                </p>
 
                 <h1>Our Affiliation</h1>
-                <p>We were launched as an official church plant of the Evangelical Covenant Church, and continue to be part of this wonderful family of churches. They provide resources, encouragement, and accountability.</p>
+                <p>
+                    We were launched in 2005 as an official church plant of the Evangelical Covenant Church,
+                    and continue to be part of this wonderful family of churches.
+                    They provide resources, encouragement, and accountability.
+                </p>
                 <h4>Related links:</h4>
                 <ul>
-                    <li><a href="http://www.covchurch.org">Evangelical Covenant Church website</a></li>
-                    <li>ECC – “<a href="http://www.covchurch.org/who-we-are/">Who We Are</a>”</li>
-                    <li>ECC – “<a href="http://www.covchurch.org/who-we-are/beliefs/affirmations/">Affirmations</a>”</li>
+                    <li>
+                        <a href="http://www.covchurch.org">Evangelical Covenant Church website</a>
+                    </li>
+                    <li>
+                        ECC –
+                        “<a href="http://www.covchurch.org/who-we-are/">Who We Are</a>”
+                    </li>
+                    <li>
+                        ECC –
+                        “<a href="http://www.covchurch.org/who-we-are/beliefs/affirmations/">Affirmations</a>”
+                    </li>
                 </ul>
             </section>
 
