--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
             <p class="intro">
                 Artisan Church’s mission is to be a vibrant church community where we
-                encounter God, embrace people, and engage culture—in the way of Jesus.
+                <i>encounter God, embrace people, and engage culture—in the way of Jesus.</i>
             </p>
 
             <p class="scripture-link">
