Shorten title appendage, fix missing space

--- a/_page-top.html
+++ b/_page-top.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{if embed:title}{embed:title} – {/if}Artisan Church – Rochester, New York</title>
-    <meta name="description"content="{if embed:desc}{embed:desc}{if:else}Encounter God, embrace people, engage culture—in the way of Jesus.{/if}">
+    <title>{if embed:title}{embed:title} – {/if}Artisan Church – Rochester, NY</title>
+    <meta name="description" content="{if embed:desc}{embed:desc}{if:else}Encounter God, embrace people, engage culture—in the way of Jesus.{/if}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
