Update About section

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
             </p>
 
             <p class="scripture-link">
-                <a href="http://beta.biblestudytools.com/nrs/passage?q=mark+12:28-34;matthew+28:18-20;matthew+9:9-17;acts+17:22-34;john+14:6-7">
-                    (Mark 12:28–34; Matthew 28:18–20, 9:9–17; Acts 17:22–34; John 14:6–7)
-                </a>
+                ({exp:verse_url}
+                    Mark 12:28–34; Matthew 28:18–20; Matthew 9:9–17; Acts 17:22–34; John 14:6–7
+                {/exp:verse_url})
             </p>
 
             <h2>Our values:</h2>
