--- a/our-name.html
+++ b/our-name.html
@@ -1,7 +1,7 @@
 {embed="v3/_page-top"
- title="About Us: Our Name"
- desc="Artisan Church's name is inspired by Paul's writing in Ephesians 2:10."
- page_slug="name"
+ title="About Us: Why “Artisan” Church?"
+ desc="The story of how we came to be named Artisan Church."
+ page_slug="our-name"
  sec_slug="about"}
 
 {embed="v3/_header" sec_slug="about"}
@@ -12,13 +12,70 @@
 
             <h1>Why “Artisan” Church?</h1>
 
+            <h2>What’s in a name?</h2>
 
+            <p>
+                The name “Artisan Church” beautifully expresses our desire to creatively live out the
+                mission God has given us to encounter God, embrace people, and engage culture, in the
+                way of Jesus. The imagery is inspired by the apostle Paul, who wrote:
+            </p>
+
+            <blockquote>
+                <p>
+                    “For we are God’s workmanship, created in Christ Jesus to do good works, which God
+                    prepared in advance for us to do.”
+                </p>
+                <cite>
+                    – {exp:verse_url}Ephesians 2:10{/exp:verse_url}
+                </cite>
+            </blockquote>
+
+            <p>
+                God is the “master artisan,” creating everything – including us – to be part of his
+                redemptive design. We are simply called to be faithful apprentices of Jesus, to do the
+                good work of sharing his blessings with our friends, family, neighbors, community, and
+                world. You’re welcome to join us on that journey!
+            </p>
+
+            <h2>A bit of history: from two church planting teams to one vibrant community!</h2>
+
+            <p>
+                Artisan Church had its start in the wonderful church planting teams
+                formerly know as Capax Dei Church and Quest Church.
+                These two groups were well on their way to fully launching separately
+                when God brought an even more ambitious plan into focus. Although both projects were
+                moving forward, neither felt quite “complete.” Each group had something unique to offer,
+                not only in its gifts and talents, but also in the core communities it served. Yet the
+                mission and vision were strikingly similar, almost identical: a strong calling to be a
+                church for greater Rochester, yet centered in the southeast quadrant of the city; a fresh
+                approach to expressing the Christian faith for a postmodern world while staying true to
+                the Gospel; valuing art and creativity; seeking justice; sharing new life in the Way of
+                Jesus&hellip; and the list goes on.
+            </p>
+
+            <p>
+                So, in February 2005, the two teams came together, and Artisan
+                Church was born. Over the summer we continued to flesh out the
+                “launch team” and ministry areas as we headed toward our fall “Grand
+                Opening.” By God’s grace, in October 2005 we were successfully
+                launched, and have continued to experience wonderful growth, both in
+                the depth of lives changed, and in the breadth of many new people
+                finding a place of welcome.
+            </p>
+
+            <p>
+                With this growth comes wonderful opportunities, real challenges, and even
+                greater responsibility to truly make a difference in people’s lives, our
+                city, and the world. We’re humbled by what God is doing in and through his
+                people at Artisan. So now you join the story already in progress. We’d love
+                to have you come explore and be part of the adventure!
+            </p>
 
         </section>
 
-        {embed="v3/_sidebar-section.html" page_slug="name"}
+       {embed="v3/_sidebar-about" page_slug="our-name"}
 
-    </main>
+   </main>
 
 {embed="v3/_footer" sec_slug="about"}
 
