Minor updates to footer

--- a/_footer.html
+++ b/_footer.html
@@ -15,15 +15,15 @@
 {embed="v3/_navigation" sec_slug="{embed:sec_slug}"}
         </nav>
 
-<section class="social">
+        <section class="social">
             <ul>
                 <li>
-                    <a href="http://twitter.com/ArtisanChurch" title="Follow us on Twitter">
+                    <a href="https://twitter.com/ArtisanChurch" title="Follow us on Twitter">
                         <i class="icon-twitter-sign icon-2x"></i> Twitter
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.facebook.com/ArtisanChurch" title="Like us on Facebook">
+                    <a href="https://www.facebook.com/ArtisanChurch" title="Like us on Facebook">
                         <i class="icon-facebook-sign icon-2x"></i> Facebook
                     </a>
                 </li>
